--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,10 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
-        {
-            "src":"./index.py",
-            "use": "@vercel/python",
-            "config":{"runtime":"python3.8"}
-        }
-    ],
-    "routes": [
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
+      {
+        "src": "app.py",
+        "use": "@vercel/python"
+      }
     ]
-}
+  }
+  
