--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,19 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
-        {
-            "src":"./index.py",
-            "use": "@vercel/python",
-            "config":{"runtime":"python3.11.9"}
+      {
+        "src": "./index.py",
+        "use": "@vercel/python",
+        "config": {
+          "runtime": "vercel/python"
         }
+      }
     ],
     "routes": [
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
     ]
-}
+  }
+  
