--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ flask
 Gunicorn
 pymongo
 python-dotenv
-Flask-Mail==0.9.1
-Flask-PyMongo==2.3.0
-matplotlib==3.4.3
-numpy==1.21.2
-pymongo==3.12.0
-bcrypt==3.2.0
+Flask-Mail
+Flask-PyMongo
+matplotlib
+numpy
+pymongo
+bcrypt
 
